FEATURE SCHOOL NEW CHANGES

--- a/src/main/resources/templates/pagina1.html
+++ b/src/main/resources/templates/pagina1.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
 </head>
+
 <body>
-    <!-- Incluye el menú -->
+    <!-- Incluye el menï¿½ -->
     <div th:replace="fragments/menu"></div>
-    
+
     <h1 th:text="${mensaje}"></h1>
 </body>
+
 </html>
