feauture change name logos
Social media logos has been change

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,9 +37,9 @@
                 <div>
                     <a
                         href="https://www.facebook.com/p/Instituci%C3%B3n-Educativa-San-Jos%C3%A9-de-El-Tejar-100057593913527/ "><img
-                            src="./logo/facebook-svgrepo-com.svg" alt=""></a>
-                    <a href="#"><img src="./logo/instagram-svgrepo-com.svg" alt=""></a>
-                    <a href="#"><img src="./logo/x-social-media-round-icon.svg" alt=""></a>
+                            src="./logo/facebook_svg.svg" alt=""></a>
+                    <a href="#"><img src="./logo/instagram-svg.svg" alt=""></a>
+                    <a href="#"><img src="./logo/x-svg.svg" alt=""></a>
                 </div>
             </div>
         </div>
