--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
+<body class="dashboard_body">
     <main>
         <div class="login_container">
             <div class="escudo">
-                <img src="./logo/Escudo.png" alt="escudo_escuela">
+                <img src="./logo/escudo.png" alt="escudo_escuela">
             </div>
             <div class="text_login">
                 <h1>Institución Educativa</h1>
@@ -37,9 +39,9 @@
                 <div>
                     <a
                         href="https://www.facebook.com/p/Instituci%C3%B3n-Educativa-San-Jos%C3%A9-de-El-Tejar-100057593913527/ "><img
-                            src="./logo/facebook-svgrepo-com.svg" alt=""></a>
-                    <a href="#"><img src="./logo/instagram-svgrepo-com.svg" alt=""></a>
-                    <a href="#"><img src="./logo/x-social-media-round-icon.svg" alt=""></a>
+                            src="./logo/facebook_logo.svg" alt=""></a>
+                    <a href="#"><img src="./logo/instagram-logo.svg" alt=""></a>
+                    <a href="#"><img src="./logo/x-logo.svg" alt=""></a>
                 </div>
             </div>
         </div>
