--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -3,16 +3,20 @@ html {
 }
 
 body {
-    font-family: Parkinsans, sans-serif;
+    font-family: Roboto, sans-serif;
     height: 100%;
     margin: 0px;
     background-color: #F2F2F2;
 }
 
+div.contenedor-principal {
+    background-color: #E2E2E2;
+    height: 100%;
+}
+
 main {
     display: flex;
     justify-content: center;
-
 }
 
 div.login_container {
@@ -77,7 +81,6 @@ div.login_bottom a {
     border-radius: 20px;
     text-decoration: none;
     background: rgb(217, 181, 60);
-    background: rgb(217, 181, 60);
     background: linear-gradient(47deg, rgba(217, 181, 60, 1) 0%, rgba(223, 4, 11, 1) 100%);
 }
 
@@ -85,7 +88,7 @@ div.data input {
     padding: 10px 15px;
     background-color: white;
     border: 1px solid white;
-    border-bottom: 2px solid lightgrey;
+    border-bottom: 3px solid lightgrey;
 }
 
 div.escudo {
@@ -129,4 +132,70 @@ div.option_request label {
 
 div.option_request select {
     margin-right: 25px;
+}
+
+main.dashboard_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: white;
+    height: 100%;
+}
+
+main.dashboard_container div {
+    text-align: justify;
+    padding: 20px;
+    padding-bottom: 10px;
+    font-size: 15px;
+}
+
+main.dashboard_container div:nth-child(2) {
+    text-align: justify;
+    padding: 30px;
+    border-left: 5px solid #926a78;
+    border-right: 5px solid #926a78;
+
+}
+
+main.dashboard_container img {
+    width: 60px;
+    margin-left: 44%;
+}
+
+main.dashboard_container h2 {
+    text-align: center;
+    margin-bottom: 8%;
+}
+
+body.dashboard_body {
+    height: 100%;
+}
+
+div.logo_facebook_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.logo_facebook_container img {
+    width: 40px;
+    padding-left: 20px;
+    margin: 0px;
+}
+
+
+div.logo_facebook_container a {
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    background-color: #e6d7dc;
+    border-radius: 10px;
+}
+
+div.logo_facebook_container span {
+    position: relative;
+    top: -12px;
+}
+
+body.body_dashboard {
+    background-color: #FFFFFF;
 }
