FEATURE SHIELD LOGO MISSED
Se añadió el archivo del escudo

--- a/src/main/resources/templates/fragments/admin_menu.html
+++ b/src/main/resources/templates/fragments/admin_menu.html
@@ -20,7 +20,7 @@
 
         <div class="main_container">
             <div class="logo">
-                <img src="../logo/escudo.png" alt="escudo_escuela">
+                <img src="../logo/escudo_logo.png" alt="escudo_escuela">
                 <p>Institución Educativa San José de El Tejar </p>
             </div>
             <nav class="left_nav">
