--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="login_container">
             <div class="escudo">
-                <img src="./logo/escudo.png" alt="escudo_escuela">
+                <img src="./logo/escudo_logo.png" alt="escudo_escuela">
             </div>
             <div class="text_login">
                 <h1>Institución Educativa</h1>
