--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="data password">
                 <label for="password">Contraseña</label>
-                <input type="text" id="password" required placeholder="Escriba su contraseña">
+                <input type="password" id="password" required placeholder="Escriba su contraseña">
             </div>
             <div class="login_bottom">
                 <a href="#">Iniciar Sesión</a>
