--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>San José - Login</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>San José - Login</title>
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+<link rel="stylesheet" th:href="@{/css/style.css}">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+	rel="stylesheet">
 </head>
 
 <body class="dashboard_body">
-    <main>
-        <div class="login_container">
-            <div class="escudo">
-                <img src="./logo/escudo_logo.png" alt="escudo_escuela">
-            </div>
-            <div class="text_login">
-                <h1>Institución Educativa</h1>
-                <h1>San José de El Tejar</h1>
-            </div>
-            <div class="data user">
-                <label for="user_name">Usuario</label>
-                <input type="text" id="user_name" required placeholder="Escriba numero de cédula">
-            </div>
-            <div class="data password">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" required placeholder="Escriba su contraseña">
-            </div>
-            <div class="login_bottom">
-                <a href="#">Iniciar Sesión</a>
-            </div>
-            <div class="social_media_logo">
-                <div>
-                    <a
-                        href="https://www.facebook.com/p/Instituci%C3%B3n-Educativa-San-Jos%C3%A9-de-El-Tejar-100057593913527/ "><img
-                            src="./logo/facebook_logo.svg" alt=""></a>
-                    <a href="#"><img src="./logo/instagram-logo.svg" alt=""></a>
-                    <a href="#"><img src="./logo/x-logo.svg" alt=""></a>
-                </div>
-            </div>
-        </div>
-    </main>
+	<main>
+		<div class="login_container">
+			<div class="escudo">
+				<img th:src="@{/logo/escudo_logo.png}" alt="escudo_escuela">
+			</div>
+			<div class="text_login">
+				<h1>Institución Educativa</h1>
+				<h1>San José de El Tejar</h1>
+			</div>
+			<form th:action="@{/index}" method="post">
+				<div class="data user">
+					<label for="user_name">Usuario</label> <input type="text"
+						id="user_name" name="username" required placeholder="Escriba número de cédula">
+				</div>
+				<div class="data password">
+					<label for="password">Contraseña</label> <input type="password"
+						id="password" name="password" required placeholder="Escriba su contraseña">
+				</div>
+				<div class="login_bottom">
+					<button type="submit">Iniciar Sesión</button>
+				</div>
+			</form>
+			<div class="social_media_logo">
+				<p th:if="${param.error}">Usuario o contraseña incorrecta</p>
+			</div>
+			<div class="social_media_logo">
+				<div>
+					<a href="https://www.facebook.com/..."> <img
+						th:src="@{/logo/facebook_logo.svg}" alt="Facebook">
+					</a> <a href="#"> <img th:src="@{/logo/instagram-logo.svg}"
+						alt="Instagram">
+					</a> <a href="#"> <img th:src="@{/logo/x-logo.svg}" alt="Twitter">
+					</a>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 
 </html>
