FEATURES ADD BUTTON CSS
Se corrigió el nombre de bottom a button

Se añadio el css al button

--- a/src/main/resources/templates/css/style.css
+++ b/src/main/resources/templates/css/style.css
@@ -81,6 +81,8 @@ div.login_bottom a {
     border-radius: 20px;
     text-decoration: none;
     background: #888888;
+    border-bottom: 0px;
+    height: ;
 }
 
 div.data input {
