--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 					<label for="password">Contraseña</label> <input type="password"
 						id="password" name="password" required placeholder="Escriba su contraseña">
 				</div>
-				<div class="login_bottom">
+				<div class="login_button">
 					<button type="submit">Iniciar Sesión</button>
 				</div>
 			</form>
