--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -60,28 +60,25 @@ div.password_forgot a {
     text-decoration: none;
 }
 
-div.login_bottom {
+div.login_button {
     text-align: center;
     margin-top: 5%;
-    margin-bottom: 5%;
 }
 
-div.password_forgot button:visited {
-    color: black;
-}
 
-div.login_bottom button:visited {
-    color: white;
-}
-
-div.login_bottom button {
+div.login_button button {
     display: inline-block;
+    color: white;
     font-size: bold;
-    padding: 10px 15px;
-    border-radius: 20px;
+    padding: 5px 20px;
+    border-radius: 40px;
     text-decoration: none;
-    background: rgb(217, 181, 60);
-    background: linear-gradient(47deg, rgba(217, 181, 60, 1) 0%, rgba(223, 4, 11, 1) 100%);
+    background: #888888;
+    border-color: #888888;
+    cursor: pointer;
+    width: 135px;
+    height: 39.2px;
+    font-size: 15px
 }
 
 div.data input {
@@ -105,7 +102,6 @@ div.social_media_logo {
     display: flex;
     justify-content: center;
     padding: 10px;
-    margin-bottom: 10px;
 }
 
 div.social_media_logo img {
