feature professor teable
Empezando a hacer el html de profesor

--- a/src/main/resources/templates/fragments/admin_menu_htmls/profesor.html
+++ b/src/main/resources/templates/fragments/admin_menu_htmls/profesor.html
@@ -5,10 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profesor</title>
+
+    <link rel="stylesheet" href="../../../static/css/style_teacher.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/dbb0bb9273.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Profesor</h1>
+    <div class="profesor_table_container">
+        <div class="header">
+            <div class="input_search">
+                <span>Profesores</span>
+                <input type="search" placeholder="Buscar">
+            </div>
+            <div class="button_add_teacher">
+                <button>
+                    <i class="fa-solid fa-user-plus"></i>
+                     | Agregar Profesor
+                </button>
+            </div>
+        </div>
+        <div class="table_container">
+
+        </div>
+    </div>
 </body>
 
 </html>
