--- a/src/main/resources/templates/fragments/admin_menu_htmls/profesor.html
+++ b/src/main/resources/templates/fragments/admin_menu_htmls/profesor.html
@@ -30,7 +30,120 @@
             </div>
         </div>
         <div class="table_container">
-
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Cédula</th>
+                        <th>Profesión</th>
+                        <th>Curso</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="foot_contanier">
+            <button class="before_button"><i class="fa-solid fa-less-than"></i><span>Anterior</span></button>
+            <button class="after_button"><span>Siguiente</span><i class="fa-solid fa-greater-than"></i></button>
         </div>
     </div>
 </body>
