FEATURES TEACHERS HTML FINISHED
El html, CSS de profesores esta completado

--- a/src/main/resources/templates/fragments/admin_menu.html
+++ b/src/main/resources/templates/fragments/admin_menu.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../css/style_fragments.css">
 
+    <link rel="icon" href="../../static/logo/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,7 +26,7 @@
             </div>
             <nav class="left_nav">
                 <ul>
-                    <li><a href="#" data-url="./admin_menu_htmls/profesor.html">
+                    <li><a href="#" data-url="./admin_menu_htmls/teachers.html">
                             <img src="../logo/teacher_logo.svg" alt="teacher_logo">Profesores</a></li>
                     <li><a href="#" data-url="./admin_menu_htmls/alumno.html">
                             <img src="../logo/student_logo.svg" alt="student_logo">Alumnos</a></li>
