--- a/src/main/resources/templates/fragments/admin_menu_htmls/teachers.html
+++ b/src/main/resources/templates/fragments/admin_menu_htmls/teachers.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profesor</title>
+    <title>Profesor - San José</title>
 
     <link rel="stylesheet" href="../../../static/css/style_teacher.css">
+    <link rel="icon" href="../../../static/logo/favicon.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/dbb0bb9273.js" crossorigin="anonymous"></script>
 </head>
@@ -20,12 +23,15 @@
         <div class="header">
             <div class="input_search">
                 <span>Profesores</span>
-                <input type="search" placeholder="Buscar">
+                <div class="input_search_lupa">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="search" name="search_teacher" id="search_teacher" placeholder="Buscar Profesor">
+                </div>
             </div>
             <div class="button_add_teacher">
                 <button>
                     <i class="fa-solid fa-user-plus"></i>
-                     | Agregar Profesor
+                    | Agregar Profesor
                 </button>
             </div>
         </div>
@@ -42,6 +48,30 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Diego Alberto</th>
+                        <th>Andrade Santin</th>
+                        <th>1723758391</th>
+                        <th>Ingeniero Automotriz</th>
+                        <th>Primero "A"</th>
+                        <th>
+                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                            <a href="#"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="#"><i class="fa-solid fa-trash"></i></a>
+                        </th>
+                    </tr>
                     <tr>
                         <th>Diego Alberto</th>
                         <th>Andrade Santin</th>
