--- a/src/main/resources/static/css/style_teacher.css
+++ b/src/main/resources/static/css/style_teacher.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Roboto;
 }
@@ -14,6 +13,7 @@ a:visited {
 }
 
 div.profesor_table_container {
+    overflow: hidden;
     border: 1px solid black;
     padding: 10px;
 }
@@ -31,23 +31,35 @@ div.input_search {
     width: 40%;
 }
 
-div.input_search input {
-    background-color: white;
+div.input_search_lupa i {
+    color: lightgray;
+    padding: 5px;
+}
+
+div.input_search_lupa {
     border: 2px solid lightgrey;
-    border-radius: 20px;
-    padding: 10px;
-    padding-left: 40px;
+    padding: 5px;
+    border-radius: 10px;
     margin-left: 20%;
-    background-image: url();
-    height: 35px;
-    width: 40%;
+    display: flex;
+}
+
+div.input_search_lupa:focus {
+    border: 1px solid black;
+}
+
+div.input_search input {
+    width: 200px;
+    border: none;
+    outline: none;
+    background-color: transparent;
 }
 
 div.input_search span {
     font-size: 20px;
-    padding-left: 20px;
-    padding-top: 7%;
-    padding-bottom: 7%;
+    padding-left: 30px;
+    padding-top: 5%;
+    padding-bottom: 5%;
 
 }
 
@@ -56,24 +68,24 @@ input:focus {
 }
 
 div.button_add_teacher button {
-    background-color: rgb(116, 57, 73);
+    background-color: #6C2941;
     color: white;
     padding: 15px;
-    border: 1px solid rgb(116, 57, 73);
+    border: 1px solid #6C2941;
     border-radius: 10px;
     cursor: pointer;
 }
 
 
-div.table_container table{
+div.table_container table {
     border-collapse: collapse;
 }
 
 div.table_container thead th {
     color: white;
-    width: 250px;
+    width: 400px;
     padding: 20px;
-    background-color: rgb(116, 57, 73);
+    background-color: #6C2941;
 }
 
 div.table_container thead th:first-child {
@@ -92,20 +104,30 @@ div.table_container tbody th {
     padding: 20px;
 }
 
+div.table_container tbody tr:nth-of-type(even) {
+    background-color: #f8f3f5;
+}
+
+
+div.table_container tbody tr a {
+    padding: 5px;
+    margin: 2px;
+}
+
 div.foot_contanier {
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
 
-div.foot_contanier i{
+div.foot_contanier i {
     padding: 10px;
     padding-right: 10px;
 }
 
-div.foot_contanier button{
-    background-color: rgb(116, 57, 73);
-    border: 1px solid rgb(116, 57, 73);
+div.foot_contanier button {
+    background-color: #6C2941;
+    border: 1px solid #6C2941;
     border-radius: 7px;
     margin-right: 10px;
     color: white;
@@ -113,11 +135,10 @@ div.foot_contanier button{
     width: 115px;
 }
 
-div.foot_contanier button.after_button span{
+div.foot_contanier button.after_button span {
     padding-left: 10px;
 }
-div.foot_contanier button.before_button span{
+
+div.foot_contanier button.before_button span {
     padding-right: 10px;
 }
-
-
