--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,16 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>San José - Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>San José - Login</title>
 
-<link rel="stylesheet" th:href="@{/css/style.css}">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-	rel="stylesheet">
+	<link rel="icon" href="../static/logo/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 </head>
 
 <body class="dashboard_body">
@@ -26,12 +27,12 @@
 			</div>
 			<form th:action="@{/index}" method="post">
 				<div class="data user">
-					<label for="user_name">Usuario</label> <input type="text"
-						id="user_name" name="username" required placeholder="Escriba número de cédula">
+					<label for="user_name">Usuario</label> <input type="text" id="user_name" name="username" required
+						placeholder="Escriba número de cédula">
 				</div>
 				<div class="data password">
-					<label for="password">Contraseña</label> <input type="password"
-						id="password" name="password" required placeholder="Escriba su contraseña">
+					<label for="password">Contraseña</label> <input type="password" id="password" name="password"
+						required placeholder="Escriba su contraseña">
 				</div>
 				<div class="login_button">
 					<button type="submit">Iniciar Sesión</button>
@@ -42,10 +43,8 @@
 			</div>
 			<div class="social_media_logo">
 				<div>
-					<a href="https://www.facebook.com/..."> <img
-						th:src="@{/logo/facebook_logo.svg}" alt="Facebook">
-					</a> <a href="#"> <img th:src="@{/logo/instagram-logo.svg}"
-						alt="Instagram">
+					<a href="https://www.facebook.com/..."> <img th:src="@{/logo/facebook_logo.svg}" alt="Facebook">
+					</a> <a href="#"> <img th:src="@{/logo/instagram-logo.svg}" alt="Instagram">
 					</a> <a href="#"> <img th:src="@{/logo/x-logo.svg}" alt="Twitter">
 					</a>
 				</div>
